--- a/.github/workflows/webdriver.yml
+++ b/.github/workflows/webdriver.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/checkout@v2        
       with:
-        repository: Codeception/CodeceptJS.git
+        repository: codeceptjs/CodeceptJS
         path: codeceptjs    
     - name: Use Node.js ${{ matrix.node-version }}    
       uses: actions/setup-node@v1
